2007-08-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_stroke): Make the dots in lt 0
	look more like dots.

	* term/cairo.trm src/wxterminal/gp_cairo.c src/wxterminal/gp_cairo.h:
	Add dashlength option to cairopdf terminal.

2007-08-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm (X11_text): Fix conditionally missing {.

2007-08-04  Matthias Habl  <mhabl@users.sourceforge.net>

	* configure.in: Allow to configure from inside an emacs script.
	Bug #1741156

2007-08-04  Ethan Merritt  <merritt@u.washington.edu>

	* missing:  Nobody "really needs" makeinfo.  Allow installs without it.

2007-08-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_encoding) docs/gnuplot.doc:  New command
	`set encoding locale` attempts to query the runtime environment for
	the character encoding of the current locale setting (LC_CTYPE).

2007-08-02  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/hidden3d.c (intersect_line_plane intersect_line_line
	cover_point_poly): New helper routines.

	* src/hidden3d.c (in_front): Replaced occlusion tests 4-9 by a more
	general approach that handles all of these cases jointly. This results
	in substantial code reduction, and fixes several reported cases where
	occluded line fragments 'leaked through' the occluding surface.
	Bugs #1718109 #1726773 #1727198

	EAM - code reviewed and bug fixes confirmed.

2007-08-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c (read_line): Treat line extension consistently
	for both interactive and non-interactive input paths. This is 
	Timothee Lecomte's version of the fix.
	Bug #1753069.

	* docs/gnuplot.doc: Clarify gprintf() description.

2007-08-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (fill_between): Fix clipping bug introduced by
	polar filledcurve patches.

2007-07-27  Dietmar Warning  <dietmar.warning@arcor.de>

	* term/win.c (WIN_enhanced_open): Avoid compiler warning.
